<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="249dp"
        android:layout_height="160dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/artistName"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="Artist Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/yearText"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameText" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Year"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="@+id/artistName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/artistName" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Art Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/artistName"
        app:layout_constraintEnd_toEndOf="@+id/artImageView"
        app:layout_constraintStart_toStartOf="@+id/artImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>